# caculatortreesitter

./: Cargo.toml  README.md
src/: main.rs
tree-sitter-cac/: Cargo.toml  grammar.js  package.json
tree-sitter-cac/bindings/node/: index.js
tree-sitter-cac/bindings/rust/: lib.rs
tree-sitter-cac/src/: grammar.json  node-types.json  parser.c
tree-sitter-cac/test/: test.txt  test3.txt
tree-sitter-caculator/: README.md  grammar.js  package.json
tree-sitter-caculator/bindings/node/: binding.cc
tree-sitter-caculator/src/: grammar.json  node-types.json  parser.c
tree-sitter-caculator/test/: test2.txt
tree_sitter_cac/: Cargo.toml  build.rs
tree_sitter_cac/src/: lib.rs
ui/: appwindow.slint
