[package]
name = "caculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-cac = {path = "tree-sitter-cac"}
tree-sitter = "0.20.7"
slint = "0.2"
[build-dependencies]
slint-build = "0.2"
